fix asset modal is hidden behind. MTC-11709

--- a/mt-static/plugins/TinyMCE/tiny_mce/plugins/mt_fullscreen/css/mt_fullscreen.css
+++ b/mt-static/plugins/TinyMCE/tiny_mce/plugins/mt_fullscreen/css/mt_fullscreen.css
@@ -4,7 +4,7 @@
 
 .fullscreen_editor {
     position: fixed !important;
-    z-index: 2000;
+    z-index: 1001;
     top: 0;
     left: 0;
 }
